--- a/src/app/responsive/responsive.component.html
+++ b/src/app/responsive/responsive.component.html
@@ -4,7 +4,7 @@
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous"
 />
-<div class="container-fluid p-5 bg-primary text-white text-center  sm-5">
+<div class="container-fluid p-5 bg-sucsuss text-white text-center  sm-5">
     <h1 class="mt-5 sm-5">My First Bootstrap Page</h1>
     <p class="mt-5 sm-5">Resize this responsive page to see the effect!</p> 
   </div>
